--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "jquery": "^3.6.1",
-    "sqlite3": "^5.1.2"
+    "multer": "^1.4.5-lts.1",
+    "sqlite3": "^5.1.2",
+    "sqlite3-transactions": "^0.0.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
