--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "lab6",
+  "name": "RGR",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Serhii Koba",
+  "author": "RGR Social Network",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
-    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "jquery": "^3.6.1",
     "sqlite3": "^5.1.2",
-    "sqlite3-transactions": "^0.0.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
